syntax = "proto3";

package scyna;
option  java_package = "io.scyna.proto";
option  java_multiple_files = true;
option  csharp_namespace = "scyna.proto";
option  optimize_for = CODE_SIZE;
option  go_package = "./;scyna";

message Configuration {
  string NatsUrl = 1;
  string NatsUsername = 2;
  string NatsPassword = 3;
  string DBHost = 4;
  string DBUsername = 5;
  string DBPassword = 6;
  string DBLocation = 7;
}

/*session*/
message CreateSessionRequest {
  string Context = 1;
  string Secret = 2;
}

message CreateSessionResponse {
  uint64        SessionID = 1;
  Configuration Config = 5;
}

message EndSessionSignal {
  uint64 ID = 1;
  string Code = 2;
  string Module = 3;
}

message UpdateSessionSignal {
  uint64 ID = 1;
  string Module = 2;
}

/*GENERATOR*/
message GetIDResponse {
  uint32 prefix = 1;
  uint64 start = 2;
  uint64 end = 3;
}

message GetSNRequest {
  string key = 1;
}

message GetSNResponse {
  uint32 prefix = 1;
  uint64 start = 2;
  uint64 end = 3;
}

/*LOG*/
message LogCreatedSignal {
  uint64 Time = 1;
  uint32 Level = 2;
  string Text = 3;
  uint64 ID = 4;
  uint64 SEQ = 5;
  bool   Session = 6;
}

message TraceCreatedSignal {
  uint64 ID = 1;
  uint64 ParentID = 2;
  uint32 Type = 3;
  uint64 Time = 4;
  uint64 Duration = 5;
  string Path = 6;
  string Source = 7;
  uint64 SessionID = 8;
  int32  Status = 9;
}

message TagCreatedSignal {
  uint64 TraceID = 1;
  string Key = 2;
  string Value = 3;
}

message ServiceDoneSignal {
  uint64 TraceID = 1;
  string Response = 2;
}